# tacstat-rs

./: .env  Cargo.toml  Tacview-20220630-011729-DCS-test_dmt_av8.txt.acmi  explore.ipynb  interesting.md
src/: computation.rs  main.rs  original.py
src/models/: game_state.rs  mod.rs  player.rs  position.rs
src/utils/: computation.rs  mod.rs
