[package]
name = "tacstat-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "6.1.0"
indicatif = "0.17.9"
rayon = "1.10.0"
regex = "1.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde-pickle = "1.2.0"
zip = "0.6"
